--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "CPP-03"]
 	path = CPP-03
 	url = https://github.com/tobiianselmo/CPP-03.git
+[submodule "CPP-04"]
+	path = CPP-04
+	url = https://github.com/tobiianselmo/CPP-04.git
