--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "CPP-05"]
 	path = CPP-05
 	url = https://github.com/tobiianselmo/CPP-05.git
+[submodule "CPP-06"]
+	path = CPP-06
+	url = https://github.com/tobiianselmo/CPP-06.git
